parser/parsemodule/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BR
    NOT
    PARENTHESE
    STAR
    UNKNOWN

Grammar

Rule 0     S' -> entries
Rule 1     entries -> entry
Rule 2     entries -> entry moreentries
Rule 3     brackets -> SP
Rule 4     brackets -> EP
Rule 5     moreentries -> entry
Rule 6     moreentries -> entry moreentries
Rule 7     entry -> SP exp EP
Rule 8     entry -> SP exps EP
Rule 9     entry -> SBQ entries EBQ
Rule 10    exps -> exp
Rule 11    exps -> exp SEP moreexp
Rule 12    moreexp -> exp
Rule 13    moreexp -> exp SEP moreexp
Rule 14    exp -> common
Rule 15    exp -> common_bold
Rule 16    exp -> place
Rule 17    exp -> descriptions
Rule 18    exp -> person
Rule 19    exp -> page
Rule 20    exp -> voirs
Rule 21    common_bold -> SSTRONG words ESTRONG
Rule 22    common -> word
Rule 23    place -> SEM words EEM
Rule 24    place -> SEM words EEM parenthese
Rule 25    person -> SSC word ESC
Rule 26    person -> SSC descriptions ESC
Rule 27    person -> SSC word SEP word ESC
Rule 28    person -> SSC word SEP descriptions ESC
Rule 29    person -> SSC descriptions SEP word ESC
Rule 30    person -> SSC descriptions SEP descriptions ESC
Rule 31    cross -> SPA CROSS EPA
Rule 32    title -> WORD SS WORD ES
Rule 33    page -> numberminus
Rule 34    page -> NUMBERP
Rule 35    page -> NUMBER
Rule 36    numberminus -> NUMBER MINUS NUMBER
Rule 37    numberminus -> NUMBER MINUS NUMBERP
Rule 38    numberminus -> NUMBERP MINUS NUMBER
Rule 39    numberminus -> NUMBERP MINUS NUMBERP
Rule 40    voirs -> VOIR AUSSI rest_voir_aussis
Rule 41    voirs -> VOIR rest_voir_aussis
Rule 42    rest_voir_aussis -> exp
Rule 43    rest_voir_aussis -> exp SEP rest_voir_aussis
Rule 44    type2 -> SSC words ESC
Rule 45    type2 -> SSTRONG words ESTRONG
Rule 46    type2 -> SEM words EEM
Rule 47    type2 -> words
Rule 48    words -> word
Rule 49    words -> word moreword
Rule 50    words -> word SEP moreword
Rule 51    moreword -> word
Rule 52    moreword -> word moreword
Rule 53    moreword -> word SEP moreword
Rule 54    word -> WORD
Rule 55    word -> parenthese
Rule 56    parenthese -> SPA parenthesecontents EPA
Rule 57    parenthese -> SSB parenthesecontents ESB
Rule 58    parenthese -> SPA voirs EPA
Rule 59    parenthesecontents -> parenthesecontent
Rule 60    parenthesecontents -> parenthesecontent moreparenthesecontent
Rule 61    moreparenthesecontent -> parenthesecontent
Rule 62    moreparenthesecontent -> parenthesecontent moreparenthesecontent
Rule 63    parenthesecontent -> words
Rule 64    parenthesecontent -> DOT
Rule 65    parenthesecontent -> SEP
Rule 66    parenthesecontent -> MINUS
Rule 67    parenthesecontent -> APOSTROPHE
Rule 68    descriptions -> description
Rule 69    descriptions -> description moredescription
Rule 70    moredescription -> description
Rule 71    moredescription -> description moredescription
Rule 72    description -> WORD
Rule 73    description -> SLASH
Rule 74    description -> cross
Rule 75    description -> title
Rule 76    description -> MINUS
Rule 77    description -> APOSTROPHE
Rule 78    description -> parenthese

Terminals, with rules where they appear

APOSTROPHE           : 67 77
AUSSI                : 40
BR                   : 
CROSS                : 31
DOT                  : 64
EBQ                  : 9
EEM                  : 23 24 46
EP                   : 4 7 8
EPA                  : 31 56 58
ES                   : 32
ESB                  : 57
ESC                  : 25 26 27 28 29 30 44
ESTRONG              : 21 45
MINUS                : 36 37 38 39 66 76
NOT                  : 
NUMBER               : 35 36 36 37 38
NUMBERP              : 34 37 38 39 39
PARENTHESE           : 
SBQ                  : 9
SEM                  : 23 24 46
SEP                  : 11 13 27 28 29 30 43 50 53 65
SLASH                : 73
SP                   : 3 7 8
SPA                  : 31 56 58
SS                   : 32
SSB                  : 57
SSC                  : 25 26 27 28 29 30 44
SSTRONG              : 21 45
STAR                 : 
UNKNOWN              : 
VOIR                 : 40 41
WORD                 : 32 32 54 72
error                : 

Nonterminals, with rules where they appear

brackets             : 
common               : 14
common_bold          : 15
cross                : 74
description          : 68 69 70 71
descriptions         : 17 26 28 29 30 30
entries              : 9 0
entry                : 1 2 5 6
exp                  : 7 10 11 12 13 42 43
exps                 : 8
moredescription      : 69 71
moreentries          : 2 6
moreexp              : 11 13
moreparenthesecontent : 60 62
moreword             : 49 50 52 53
numberminus          : 33
page                 : 19
parenthese           : 24 55 78
parenthesecontent    : 59 60 61 62
parenthesecontents   : 56 57
person               : 18
place                : 16
rest_voir_aussis     : 40 41 43
title                : 75
type2                : 
voirs                : 20 58
word                 : 22 25 27 27 28 29 48 49 50 51 52 53
words                : 21 23 24 44 45 46 47 63

Parsing method: LALR

state 0

    (0) S' -> . entries
    (1) entries -> . entry
    (2) entries -> . entry moreentries
    (7) entry -> . SP exp EP
    (8) entry -> . SP exps EP
    (9) entry -> . SBQ entries EBQ

    SP              shift and go to state 3
    SBQ             shift and go to state 4

    entries                        shift and go to state 1
    entry                          shift and go to state 2

state 1

    (0) S' -> entries .



state 2

    (1) entries -> entry .
    (2) entries -> entry . moreentries
    (5) moreentries -> . entry
    (6) moreentries -> . entry moreentries
    (7) entry -> . SP exp EP
    (8) entry -> . SP exps EP
    (9) entry -> . SBQ entries EBQ

    $end            reduce using rule 1 (entries -> entry .)
    EBQ             reduce using rule 1 (entries -> entry .)
    SP              shift and go to state 3
    SBQ             shift and go to state 4

    entry                          shift and go to state 5
    moreentries                    shift and go to state 6

state 3

    (7) entry -> SP . exp EP
    (8) entry -> SP . exps EP
    (14) exp -> . common
    (15) exp -> . common_bold
    (16) exp -> . place
    (17) exp -> . descriptions
    (18) exp -> . person
    (19) exp -> . page
    (20) exp -> . voirs
    (10) exps -> . exp
    (11) exps -> . exp SEP moreexp
    (22) common -> . word
    (21) common_bold -> . SSTRONG words ESTRONG
    (23) place -> . SEM words EEM
    (24) place -> . SEM words EEM parenthese
    (68) descriptions -> . description
    (69) descriptions -> . description moredescription
    (25) person -> . SSC word ESC
    (26) person -> . SSC descriptions ESC
    (27) person -> . SSC word SEP word ESC
    (28) person -> . SSC word SEP descriptions ESC
    (29) person -> . SSC descriptions SEP word ESC
    (30) person -> . SSC descriptions SEP descriptions ESC
    (33) page -> . numberminus
    (34) page -> . NUMBERP
    (35) page -> . NUMBER
    (40) voirs -> . VOIR AUSSI rest_voir_aussis
    (41) voirs -> . VOIR rest_voir_aussis
    (54) word -> . WORD
    (55) word -> . parenthese
    (72) description -> . WORD
    (73) description -> . SLASH
    (74) description -> . cross
    (75) description -> . title
    (76) description -> . MINUS
    (77) description -> . APOSTROPHE
    (78) description -> . parenthese
    (36) numberminus -> . NUMBER MINUS NUMBER
    (37) numberminus -> . NUMBER MINUS NUMBERP
    (38) numberminus -> . NUMBERP MINUS NUMBER
    (39) numberminus -> . NUMBERP MINUS NUMBERP
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA
    (31) cross -> . SPA CROSS EPA
    (32) title -> . WORD SS WORD ES

    SSTRONG         shift and go to state 17
    SEM             shift and go to state 18
    SSC             shift and go to state 21
    NUMBERP         shift and go to state 23
    NUMBER          shift and go to state 24
    VOIR            shift and go to state 25
    WORD            shift and go to state 26
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31
    SPA             shift and go to state 32
    SSB             shift and go to state 33

    exp                            shift and go to state 7
    exps                           shift and go to state 8
    common                         shift and go to state 9
    common_bold                    shift and go to state 10
    place                          shift and go to state 11
    descriptions                   shift and go to state 12
    person                         shift and go to state 13
    page                           shift and go to state 14
    voirs                          shift and go to state 15
    word                           shift and go to state 16
    parenthese                     shift and go to state 19
    description                    shift and go to state 20
    numberminus                    shift and go to state 22
    cross                          shift and go to state 28
    title                          shift and go to state 29

state 4

    (9) entry -> SBQ . entries EBQ
    (1) entries -> . entry
    (2) entries -> . entry moreentries
    (7) entry -> . SP exp EP
    (8) entry -> . SP exps EP
    (9) entry -> . SBQ entries EBQ

    SP              shift and go to state 3
    SBQ             shift and go to state 4

    entries                        shift and go to state 34
    entry                          shift and go to state 2

state 5

    (5) moreentries -> entry .
    (6) moreentries -> entry . moreentries
    (5) moreentries -> . entry
    (6) moreentries -> . entry moreentries
    (7) entry -> . SP exp EP
    (8) entry -> . SP exps EP
    (9) entry -> . SBQ entries EBQ

    $end            reduce using rule 5 (moreentries -> entry .)
    EBQ             reduce using rule 5 (moreentries -> entry .)
    SP              shift and go to state 3
    SBQ             shift and go to state 4

    entry                          shift and go to state 5
    moreentries                    shift and go to state 35

state 6

    (2) entries -> entry moreentries .

    $end            reduce using rule 2 (entries -> entry moreentries .)
    EBQ             reduce using rule 2 (entries -> entry moreentries .)


state 7

    (7) entry -> SP exp . EP
    (10) exps -> exp .
    (11) exps -> exp . SEP moreexp

  ! shift/reduce conflict for EP resolved as shift
    EP              shift and go to state 36
    SEP             shift and go to state 37

  ! EP              [ reduce using rule 10 (exps -> exp .) ]


state 8

    (8) entry -> SP exps . EP

    EP              shift and go to state 38


state 9

    (14) exp -> common .

    EP              reduce using rule 14 (exp -> common .)
    SEP             reduce using rule 14 (exp -> common .)
    EPA             reduce using rule 14 (exp -> common .)


state 10

    (15) exp -> common_bold .

    EP              reduce using rule 15 (exp -> common_bold .)
    SEP             reduce using rule 15 (exp -> common_bold .)
    EPA             reduce using rule 15 (exp -> common_bold .)


state 11

    (16) exp -> place .

    EP              reduce using rule 16 (exp -> place .)
    SEP             reduce using rule 16 (exp -> place .)
    EPA             reduce using rule 16 (exp -> place .)


state 12

    (17) exp -> descriptions .

    EP              reduce using rule 17 (exp -> descriptions .)
    SEP             reduce using rule 17 (exp -> descriptions .)
    EPA             reduce using rule 17 (exp -> descriptions .)


state 13

    (18) exp -> person .

    EP              reduce using rule 18 (exp -> person .)
    SEP             reduce using rule 18 (exp -> person .)
    EPA             reduce using rule 18 (exp -> person .)


state 14

    (19) exp -> page .

    EP              reduce using rule 19 (exp -> page .)
    SEP             reduce using rule 19 (exp -> page .)
    EPA             reduce using rule 19 (exp -> page .)


state 15

    (20) exp -> voirs .

    EP              reduce using rule 20 (exp -> voirs .)
    SEP             reduce using rule 20 (exp -> voirs .)
    EPA             reduce using rule 20 (exp -> voirs .)


state 16

    (22) common -> word .

    EP              reduce using rule 22 (common -> word .)
    SEP             reduce using rule 22 (common -> word .)
    EPA             reduce using rule 22 (common -> word .)


state 17

    (21) common_bold -> SSTRONG . words ESTRONG
    (48) words -> . word
    (49) words -> . word moreword
    (50) words -> . word SEP moreword
    (54) word -> . WORD
    (55) word -> . parenthese
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA

    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

    words                          shift and go to state 39
    word                           shift and go to state 40
    parenthese                     shift and go to state 42

state 18

    (23) place -> SEM . words EEM
    (24) place -> SEM . words EEM parenthese
    (48) words -> . word
    (49) words -> . word moreword
    (50) words -> . word SEP moreword
    (54) word -> . WORD
    (55) word -> . parenthese
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA

    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

    words                          shift and go to state 44
    parenthese                     shift and go to state 42
    word                           shift and go to state 40

state 19

    (55) word -> parenthese .
    (78) description -> parenthese .

  ! reduce/reduce conflict for EP resolved using rule 55 (word -> parenthese .)
  ! reduce/reduce conflict for SEP resolved using rule 55 (word -> parenthese .)
  ! reduce/reduce conflict for ESC resolved using rule 55 (word -> parenthese .)
  ! reduce/reduce conflict for EPA resolved using rule 55 (word -> parenthese .)
    EP              reduce using rule 55 (word -> parenthese .)
    SEP             reduce using rule 55 (word -> parenthese .)
    ESC             reduce using rule 55 (word -> parenthese .)
    EPA             reduce using rule 55 (word -> parenthese .)
    WORD            reduce using rule 78 (description -> parenthese .)
    SLASH           reduce using rule 78 (description -> parenthese .)
    MINUS           reduce using rule 78 (description -> parenthese .)
    APOSTROPHE      reduce using rule 78 (description -> parenthese .)
    SPA             reduce using rule 78 (description -> parenthese .)
    SSB             reduce using rule 78 (description -> parenthese .)

  ! EP              [ reduce using rule 78 (description -> parenthese .) ]
  ! SEP             [ reduce using rule 78 (description -> parenthese .) ]
  ! ESC             [ reduce using rule 78 (description -> parenthese .) ]
  ! EPA             [ reduce using rule 78 (description -> parenthese .) ]


state 20

    (68) descriptions -> description .
    (69) descriptions -> description . moredescription
    (70) moredescription -> . description
    (71) moredescription -> . description moredescription
    (72) description -> . WORD
    (73) description -> . SLASH
    (74) description -> . cross
    (75) description -> . title
    (76) description -> . MINUS
    (77) description -> . APOSTROPHE
    (78) description -> . parenthese
    (31) cross -> . SPA CROSS EPA
    (32) title -> . WORD SS WORD ES
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA

    EP              reduce using rule 68 (descriptions -> description .)
    SEP             reduce using rule 68 (descriptions -> description .)
    ESC             reduce using rule 68 (descriptions -> description .)
    EPA             reduce using rule 68 (descriptions -> description .)
    WORD            shift and go to state 47
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31
    SPA             shift and go to state 49
    SSB             shift and go to state 33

    description                    shift and go to state 45
    moredescription                shift and go to state 46
    cross                          shift and go to state 28
    title                          shift and go to state 29
    parenthese                     shift and go to state 48

state 21

    (25) person -> SSC . word ESC
    (26) person -> SSC . descriptions ESC
    (27) person -> SSC . word SEP word ESC
    (28) person -> SSC . word SEP descriptions ESC
    (29) person -> SSC . descriptions SEP word ESC
    (30) person -> SSC . descriptions SEP descriptions ESC
    (54) word -> . WORD
    (55) word -> . parenthese
    (68) descriptions -> . description
    (69) descriptions -> . description moredescription
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA
    (72) description -> . WORD
    (73) description -> . SLASH
    (74) description -> . cross
    (75) description -> . title
    (76) description -> . MINUS
    (77) description -> . APOSTROPHE
    (78) description -> . parenthese
    (31) cross -> . SPA CROSS EPA
    (32) title -> . WORD SS WORD ES

    WORD            shift and go to state 26
    SPA             shift and go to state 32
    SSB             shift and go to state 33
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31

    word                           shift and go to state 50
    descriptions                   shift and go to state 51
    parenthese                     shift and go to state 19
    description                    shift and go to state 20
    cross                          shift and go to state 28
    title                          shift and go to state 29

state 22

    (33) page -> numberminus .

    EP              reduce using rule 33 (page -> numberminus .)
    SEP             reduce using rule 33 (page -> numberminus .)
    EPA             reduce using rule 33 (page -> numberminus .)


state 23

    (34) page -> NUMBERP .
    (38) numberminus -> NUMBERP . MINUS NUMBER
    (39) numberminus -> NUMBERP . MINUS NUMBERP

    EP              reduce using rule 34 (page -> NUMBERP .)
    SEP             reduce using rule 34 (page -> NUMBERP .)
    EPA             reduce using rule 34 (page -> NUMBERP .)
    MINUS           shift and go to state 52


state 24

    (35) page -> NUMBER .
    (36) numberminus -> NUMBER . MINUS NUMBER
    (37) numberminus -> NUMBER . MINUS NUMBERP

    EP              reduce using rule 35 (page -> NUMBER .)
    SEP             reduce using rule 35 (page -> NUMBER .)
    EPA             reduce using rule 35 (page -> NUMBER .)
    MINUS           shift and go to state 53


state 25

    (40) voirs -> VOIR . AUSSI rest_voir_aussis
    (41) voirs -> VOIR . rest_voir_aussis
    (42) rest_voir_aussis -> . exp
    (43) rest_voir_aussis -> . exp SEP rest_voir_aussis
    (14) exp -> . common
    (15) exp -> . common_bold
    (16) exp -> . place
    (17) exp -> . descriptions
    (18) exp -> . person
    (19) exp -> . page
    (20) exp -> . voirs
    (22) common -> . word
    (21) common_bold -> . SSTRONG words ESTRONG
    (23) place -> . SEM words EEM
    (24) place -> . SEM words EEM parenthese
    (68) descriptions -> . description
    (69) descriptions -> . description moredescription
    (25) person -> . SSC word ESC
    (26) person -> . SSC descriptions ESC
    (27) person -> . SSC word SEP word ESC
    (28) person -> . SSC word SEP descriptions ESC
    (29) person -> . SSC descriptions SEP word ESC
    (30) person -> . SSC descriptions SEP descriptions ESC
    (33) page -> . numberminus
    (34) page -> . NUMBERP
    (35) page -> . NUMBER
    (40) voirs -> . VOIR AUSSI rest_voir_aussis
    (41) voirs -> . VOIR rest_voir_aussis
    (54) word -> . WORD
    (55) word -> . parenthese
    (72) description -> . WORD
    (73) description -> . SLASH
    (74) description -> . cross
    (75) description -> . title
    (76) description -> . MINUS
    (77) description -> . APOSTROPHE
    (78) description -> . parenthese
    (36) numberminus -> . NUMBER MINUS NUMBER
    (37) numberminus -> . NUMBER MINUS NUMBERP
    (38) numberminus -> . NUMBERP MINUS NUMBER
    (39) numberminus -> . NUMBERP MINUS NUMBERP
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA
    (31) cross -> . SPA CROSS EPA
    (32) title -> . WORD SS WORD ES

    AUSSI           shift and go to state 54
    SSTRONG         shift and go to state 17
    SEM             shift and go to state 18
    SSC             shift and go to state 21
    NUMBERP         shift and go to state 23
    NUMBER          shift and go to state 24
    VOIR            shift and go to state 25
    WORD            shift and go to state 26
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31
    SPA             shift and go to state 32
    SSB             shift and go to state 33

    rest_voir_aussis               shift and go to state 55
    exp                            shift and go to state 56
    common                         shift and go to state 9
    common_bold                    shift and go to state 10
    place                          shift and go to state 11
    descriptions                   shift and go to state 12
    person                         shift and go to state 13
    page                           shift and go to state 14
    voirs                          shift and go to state 15
    word                           shift and go to state 16
    parenthese                     shift and go to state 19
    description                    shift and go to state 20
    numberminus                    shift and go to state 22
    cross                          shift and go to state 28
    title                          shift and go to state 29

state 26

    (54) word -> WORD .
    (72) description -> WORD .
    (32) title -> WORD . SS WORD ES

  ! reduce/reduce conflict for EP resolved using rule 54 (word -> WORD .)
  ! reduce/reduce conflict for SEP resolved using rule 54 (word -> WORD .)
  ! reduce/reduce conflict for ESC resolved using rule 54 (word -> WORD .)
  ! reduce/reduce conflict for EPA resolved using rule 54 (word -> WORD .)
    EP              reduce using rule 54 (word -> WORD .)
    SEP             reduce using rule 54 (word -> WORD .)
    ESC             reduce using rule 54 (word -> WORD .)
    EPA             reduce using rule 54 (word -> WORD .)
    WORD            reduce using rule 72 (description -> WORD .)
    SLASH           reduce using rule 72 (description -> WORD .)
    MINUS           reduce using rule 72 (description -> WORD .)
    APOSTROPHE      reduce using rule 72 (description -> WORD .)
    SPA             reduce using rule 72 (description -> WORD .)
    SSB             reduce using rule 72 (description -> WORD .)
    SS              shift and go to state 57

  ! EP              [ reduce using rule 72 (description -> WORD .) ]
  ! SEP             [ reduce using rule 72 (description -> WORD .) ]
  ! ESC             [ reduce using rule 72 (description -> WORD .) ]
  ! EPA             [ reduce using rule 72 (description -> WORD .) ]


state 27

    (73) description -> SLASH .

    WORD            reduce using rule 73 (description -> SLASH .)
    SLASH           reduce using rule 73 (description -> SLASH .)
    MINUS           reduce using rule 73 (description -> SLASH .)
    APOSTROPHE      reduce using rule 73 (description -> SLASH .)
    SPA             reduce using rule 73 (description -> SLASH .)
    SSB             reduce using rule 73 (description -> SLASH .)
    EP              reduce using rule 73 (description -> SLASH .)
    SEP             reduce using rule 73 (description -> SLASH .)
    ESC             reduce using rule 73 (description -> SLASH .)
    EPA             reduce using rule 73 (description -> SLASH .)


state 28

    (74) description -> cross .

    WORD            reduce using rule 74 (description -> cross .)
    SLASH           reduce using rule 74 (description -> cross .)
    MINUS           reduce using rule 74 (description -> cross .)
    APOSTROPHE      reduce using rule 74 (description -> cross .)
    SPA             reduce using rule 74 (description -> cross .)
    SSB             reduce using rule 74 (description -> cross .)
    EP              reduce using rule 74 (description -> cross .)
    SEP             reduce using rule 74 (description -> cross .)
    ESC             reduce using rule 74 (description -> cross .)
    EPA             reduce using rule 74 (description -> cross .)


state 29

    (75) description -> title .

    WORD            reduce using rule 75 (description -> title .)
    SLASH           reduce using rule 75 (description -> title .)
    MINUS           reduce using rule 75 (description -> title .)
    APOSTROPHE      reduce using rule 75 (description -> title .)
    SPA             reduce using rule 75 (description -> title .)
    SSB             reduce using rule 75 (description -> title .)
    EP              reduce using rule 75 (description -> title .)
    SEP             reduce using rule 75 (description -> title .)
    ESC             reduce using rule 75 (description -> title .)
    EPA             reduce using rule 75 (description -> title .)


state 30

    (76) description -> MINUS .

    WORD            reduce using rule 76 (description -> MINUS .)
    SLASH           reduce using rule 76 (description -> MINUS .)
    MINUS           reduce using rule 76 (description -> MINUS .)
    APOSTROPHE      reduce using rule 76 (description -> MINUS .)
    SPA             reduce using rule 76 (description -> MINUS .)
    SSB             reduce using rule 76 (description -> MINUS .)
    EP              reduce using rule 76 (description -> MINUS .)
    SEP             reduce using rule 76 (description -> MINUS .)
    ESC             reduce using rule 76 (description -> MINUS .)
    EPA             reduce using rule 76 (description -> MINUS .)


state 31

    (77) description -> APOSTROPHE .

    WORD            reduce using rule 77 (description -> APOSTROPHE .)
    SLASH           reduce using rule 77 (description -> APOSTROPHE .)
    MINUS           reduce using rule 77 (description -> APOSTROPHE .)
    APOSTROPHE      reduce using rule 77 (description -> APOSTROPHE .)
    SPA             reduce using rule 77 (description -> APOSTROPHE .)
    SSB             reduce using rule 77 (description -> APOSTROPHE .)
    EP              reduce using rule 77 (description -> APOSTROPHE .)
    SEP             reduce using rule 77 (description -> APOSTROPHE .)
    ESC             reduce using rule 77 (description -> APOSTROPHE .)
    EPA             reduce using rule 77 (description -> APOSTROPHE .)


state 32

    (56) parenthese -> SPA . parenthesecontents EPA
    (58) parenthese -> SPA . voirs EPA
    (31) cross -> SPA . CROSS EPA
    (59) parenthesecontents -> . parenthesecontent
    (60) parenthesecontents -> . parenthesecontent moreparenthesecontent
    (40) voirs -> . VOIR AUSSI rest_voir_aussis
    (41) voirs -> . VOIR rest_voir_aussis
    (63) parenthesecontent -> . words
    (64) parenthesecontent -> . DOT
    (65) parenthesecontent -> . SEP
    (66) parenthesecontent -> . MINUS
    (67) parenthesecontent -> . APOSTROPHE
    (48) words -> . word
    (49) words -> . word moreword
    (50) words -> . word SEP moreword
    (54) word -> . WORD
    (55) word -> . parenthese
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA

    CROSS           shift and go to state 60
    VOIR            shift and go to state 25
    DOT             shift and go to state 63
    SEP             shift and go to state 64
    MINUS           shift and go to state 65
    APOSTROPHE      shift and go to state 66
    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

    parenthesecontents             shift and go to state 58
    voirs                          shift and go to state 59
    parenthesecontent              shift and go to state 61
    words                          shift and go to state 62
    word                           shift and go to state 40
    parenthese                     shift and go to state 42

state 33

    (57) parenthese -> SSB . parenthesecontents ESB
    (59) parenthesecontents -> . parenthesecontent
    (60) parenthesecontents -> . parenthesecontent moreparenthesecontent
    (63) parenthesecontent -> . words
    (64) parenthesecontent -> . DOT
    (65) parenthesecontent -> . SEP
    (66) parenthesecontent -> . MINUS
    (67) parenthesecontent -> . APOSTROPHE
    (48) words -> . word
    (49) words -> . word moreword
    (50) words -> . word SEP moreword
    (54) word -> . WORD
    (55) word -> . parenthese
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA

    DOT             shift and go to state 63
    SEP             shift and go to state 64
    MINUS           shift and go to state 65
    APOSTROPHE      shift and go to state 66
    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

    parenthesecontents             shift and go to state 67
    parenthesecontent              shift and go to state 61
    words                          shift and go to state 62
    word                           shift and go to state 40
    parenthese                     shift and go to state 42

state 34

    (9) entry -> SBQ entries . EBQ

    EBQ             shift and go to state 68


state 35

    (6) moreentries -> entry moreentries .

    $end            reduce using rule 6 (moreentries -> entry moreentries .)
    EBQ             reduce using rule 6 (moreentries -> entry moreentries .)


state 36

    (7) entry -> SP exp EP .

    SP              reduce using rule 7 (entry -> SP exp EP .)
    SBQ             reduce using rule 7 (entry -> SP exp EP .)
    $end            reduce using rule 7 (entry -> SP exp EP .)
    EBQ             reduce using rule 7 (entry -> SP exp EP .)


state 37

    (11) exps -> exp SEP . moreexp
    (12) moreexp -> . exp
    (13) moreexp -> . exp SEP moreexp
    (14) exp -> . common
    (15) exp -> . common_bold
    (16) exp -> . place
    (17) exp -> . descriptions
    (18) exp -> . person
    (19) exp -> . page
    (20) exp -> . voirs
    (22) common -> . word
    (21) common_bold -> . SSTRONG words ESTRONG
    (23) place -> . SEM words EEM
    (24) place -> . SEM words EEM parenthese
    (68) descriptions -> . description
    (69) descriptions -> . description moredescription
    (25) person -> . SSC word ESC
    (26) person -> . SSC descriptions ESC
    (27) person -> . SSC word SEP word ESC
    (28) person -> . SSC word SEP descriptions ESC
    (29) person -> . SSC descriptions SEP word ESC
    (30) person -> . SSC descriptions SEP descriptions ESC
    (33) page -> . numberminus
    (34) page -> . NUMBERP
    (35) page -> . NUMBER
    (40) voirs -> . VOIR AUSSI rest_voir_aussis
    (41) voirs -> . VOIR rest_voir_aussis
    (54) word -> . WORD
    (55) word -> . parenthese
    (72) description -> . WORD
    (73) description -> . SLASH
    (74) description -> . cross
    (75) description -> . title
    (76) description -> . MINUS
    (77) description -> . APOSTROPHE
    (78) description -> . parenthese
    (36) numberminus -> . NUMBER MINUS NUMBER
    (37) numberminus -> . NUMBER MINUS NUMBERP
    (38) numberminus -> . NUMBERP MINUS NUMBER
    (39) numberminus -> . NUMBERP MINUS NUMBERP
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA
    (31) cross -> . SPA CROSS EPA
    (32) title -> . WORD SS WORD ES

    SSTRONG         shift and go to state 17
    SEM             shift and go to state 18
    SSC             shift and go to state 21
    NUMBERP         shift and go to state 23
    NUMBER          shift and go to state 24
    VOIR            shift and go to state 25
    WORD            shift and go to state 26
    SLASH           shift and go to state 27
    MINUS           shift and go to state 30
    APOSTROPHE      shift and go to state 31
    SPA             shift and go to state 32
    SSB             shift and go to state 33

    exp                            shift and go to state 69
    moreexp                        shift and go to state 70
    common                         shift and go to state 9
    common_bold                    shift and go to state 10
    place                          shift and go to state 11
    descriptions                   shift and go to state 12
    person                         shift and go to state 13
    page                           shift and go to state 14
    voirs                          shift and go to state 15
    word                           shift and go to state 16
    parenthese                     shift and go to state 19
    description                    shift and go to state 20
    numberminus                    shift and go to state 22
    cross                          shift and go to state 28
    title                          shift and go to state 29

state 38

    (8) entry -> SP exps EP .

    SP              reduce using rule 8 (entry -> SP exps EP .)
    SBQ             reduce using rule 8 (entry -> SP exps EP .)
    $end            reduce using rule 8 (entry -> SP exps EP .)
    EBQ             reduce using rule 8 (entry -> SP exps EP .)


state 39

    (21) common_bold -> SSTRONG words . ESTRONG

    ESTRONG         shift and go to state 71


state 40

    (48) words -> word .
    (49) words -> word . moreword
    (50) words -> word . SEP moreword
    (51) moreword -> . word
    (52) moreword -> . word moreword
    (53) moreword -> . word SEP moreword
    (54) word -> . WORD
    (55) word -> . parenthese
    (56) parenthese -> . SPA parenthesecontents EPA
    (57) parenthese -> . SSB parenthesecontents ESB
    (58) parenthese -> . SPA voirs EPA

  ! shift/reduce conflict for SEP resolved as shift
  ! shift/reduce conflict for WORD resolved as shift
  ! shift/reduce conflict for SPA resolved as shift
  ! shift/reduce conflict for SSB resolved as shift
    ESTRONG         reduce using rule 48 (words -> word .)
    EEM             reduce using rule 48 (words -> word .)
    DOT             reduce using rule 48 (words -> word .)
    MINUS           reduce using rule 48 (words -> word .)
    APOSTROPHE      reduce using rule 48 (words -> word .)
    EPA             reduce using rule 48 (words -> word .)
    ESB             reduce using rule 48 (words -> word .)
    SEP             shift and go to state 74
    WORD            shift and go to state 41
    SPA             shift and go to state 43
    SSB             shift and go to state 33

  ! SEP             [ reduce using rule 48 (words -> word .) ]
  ! WORD            [ reduce using rule 48 (words -> word .) ]
  ! SPA             [ reduce using rule 48 (words -> word .) ]
  ! SSB             [ reduce using rule 48 (words -> word .) ]

    word                           shift and go to state 72
    moreword                       shift and go to state 73
    parenthese                     shift and go to state 42

state 41

    (54) word -> WORD .

    SEP             reduce using rule 54 (word -> WORD .)
    WORD            reduce using rule 54 (word -> WORD .)
    SPA             reduce using rule 54 (word -> WORD .)
    SSB             reduce using rule 54 (word -> WORD .)
    ESTRONG         reduce using rule 54 (word -> WORD .)
    EEM             reduce using rule 54 (word -> WORD .)
    DOT             reduce using rule 54 (word -> WORD .)
    MINUS           reduce using rule 54 (word -> WORD .)
    APOSTROPHE      reduce using rule 54 (word -> WORD .)
    EPA             reduce using rule 54 (word -> WORD .)
    ESB             reduce using rule 54 (word -> WORD .)


state 42

    (55) word -> parenthese .
